<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white_color"
    tools:context=".ui.activities.games.words.WordsGameActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/intro_image" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_best_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/best"
        android:textAllCaps="true"
        android:textColor="#000"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_best_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_best_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/title_zero"
        android:textColor="#000"
        android:textSize="32sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_play"
        android:layout_width="140dp"
        android:layout_height="54dp"
        android:layout_below="@+id/text_best_score"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:background="@drawable/btn_play"
        android:text="@string/play"
        android:textColor="@color/text_color_white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_back"
        android:layout_width="140dp"
        android:layout_height="54dp"
        android:layout_below="@+id/btn_play"
        android:layout_alignStart="@+id/btn_play"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_disable_background"
        android:text="@string/back"
        android:textColor="@color/text_color_white" />

</RelativeLayout>
