<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/selectableItemBackground"
        android:focusableInTouchMode="true"
        android:clickable="true"
        android:focusable="true">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_leaderboard_name"
            android:layout_width="match_parent"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:textSize="24sp"
            android:textColor="@color/text_color_primary"
            android:text="@string/users"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:textColor="@color/text_color_primary"
            android:layout_toStartOf="@id/text_leaderboard_point"
            android:layout_marginEnd="32dp"
            android:text="@string/rank"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_leaderboard_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:text="@string/score"
            android:textColor="@color/text_color_primary"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>


</RelativeLayout>