<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    app:cardUseCompatPadding="true">

 <androidx.appcompat.widget.LinearLayoutCompat
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="wrap_content">

     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         app:cardCornerRadius="5dp"
         android:layout_height="50dp"
         app:cardBackgroundColor="@color/background_accent_color">

         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/text_which_lesson"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="@string/in_science_chapter"
             android:textColor="@color/text_color_white"
             android:textSize="18sp"/>

     </androidx.cardview.widget.CardView>

     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:gravity="center_vertical">

         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/text_total"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_weight="1"
             android:text="@string/total_question"
             android:textSize="18sp" />

         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:id="@+id/text_total_question"
             android:layout_marginEnd="16dp"
             android:layout_weight="1"
             android:gravity="end"
             android:text="10"
             android:textSize="18sp" />

     </androidx.appcompat.widget.LinearLayoutCompat>

     <View
         android:layout_width="match_parent"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_height="5dp"
         android:background="@drawable/line_horizontal_view" />

     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:gravity="center_vertical">

         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_weight="1"
             android:text="@string/total_point"
             android:textSize="18sp" />

         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="16dp"
             android:id="@+id/text_total_point"
             android:layout_weight="1"
             android:gravity="end"
             android:text="100"
             android:textSize="18sp" />


     </androidx.appcompat.widget.LinearLayoutCompat>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_marginBottom="8dp"
         android:layout_height="50dp"
         android:layout_marginTop="16dp"
         android:gravity="center_vertical">

         <androidx.appcompat.widget.AppCompatButton
             android:layout_width="0dp"
             android:layout_height="45dp"
             android:layout_marginStart="16dp"
             android:id="@+id/btn_lets_start"
             android:layout_marginEnd="8dp"
             android:layout_weight="1"
             android:background="@drawable/btn_active_background"
             android:text="@string/let_s_start"
             android:textColor="@color/text_color_white" />

         <androidx.appcompat.widget.AppCompatButton
             android:layout_width="0dp"
             android:layout_height="45dp"
             android:layout_marginEnd="16dp"
             android:layout_weight="1"
             android:id="@+id/btn_cancel"
             android:background="@drawable/btn_disable_background"
             android:text="@string/cancel"
             android:textColor="@color/text_color_white" />

     </LinearLayout>
 </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>