<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_congrats_dialog">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/top_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="170dp"
            android:layout_height="100dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/img_congrats" />

        <FrameLayout
            android:layout_width="250dp"
            android:layout_height="250dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:src="@drawable/background_score" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/earned_point"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/text_color_white"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_earned_point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_zero"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/text_color_white"
                    android:textSize="20sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </FrameLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_question_background"
        android:text="@string/start_new_question"
        android:textColor="@color/text_color_white"
        android:textStyle="bold" />


</RelativeLayout>